Add unit tests for SensorBME280

--- a/Components/SensorBME280/CMakeLists.txt
+++ b/Components/SensorBME280/CMakeLists.txt
@@ -100,4 +100,4 @@ install(DIRECTORY include/ DESTINATION include)
 # -----------------------------------------------------------------------------
 # Unit tests
 # -----------------------------------------------------------------------------
-# include(Test.cmake)
+include(Test.cmake)
