Removed cross-platform build. Add support for several sensors

--- a/Components/CMakeLists.txt
+++ b/Components/CMakeLists.txt
@@ -1,15 +1,7 @@
 add_subdirectory(Interfaces)
-
-# Conditionally add the platform-specific I2C implementation based on the flag
-# BUILD_TARGET_RPI should be set to TRUE via the toolchain file for RPi builds
-if(BUILD_TARGET_RPI)
-    message(STATUS "Target is Raspberry Pi (BUILD_TARGET_RPI=TRUE). Adding Linux I2C Manager.")
-    add_subdirectory(LinuxI2C_Manager)
-else()
-    message(STATUS "Target is NOT Raspberry Pi (BUILD_TARGET_RPI is FALSE or Undefined). Adding Stub I2C Manager.")
-    add_subdirectory(StubI2C_Manager)
-endif()
-
-# add_subdirectory(Foo)
+add_subdirectory(SensorBuilder)
 add_subdirectory(SensorBME280)
+add_subdirectory(SensorDummy)
+add_subdirectory(SensorLPS25HB)
+add_subdirectory(LinuxI2C_Manager)
 add_subdirectory(NetworkMQTT)
